# FFmpeg_CPP

./: AudioEncoder.cpp  AudioEncoder.h  AudioResampler.cpp  AudioResampler.h  CMakeLists.txt  Muxer.cpp  Muxer.h  VideoEncoder.cpp  VideoEncoder.h  main.cpp
